--- a/styles/app.css
+++ b/styles/app.css
@@ -7,19 +7,35 @@ img{
 	right: 0;
 	bottom: 0;
 	left: 0;
-
 	background-image: url('../Images/bg.jpg');
 	background-size: cover;
 
 }
+
+/* 16:9 1366*768*/
+@media screen and (min-width: 1366px) {
+  .page{
+		height: 768px;
+  }
+}
+/* 16:9 1920*1024*/
+@media screen and (min-width: 1920px) {
+	.page{
+		height: 1024px;
+  }
+}
+
 .page .main
 {
 	position: absolute;
-	top: 120px;
+	top: 100px;
 	right: 0;
 	bottom: 100px;
-	left: 0;	
+	left: 0;
 	overflow:hidden;
+}
+.page.tdc .main {
+	top: 120px;
 }
 .page.business
 {
@@ -59,6 +75,7 @@ a.ctl_btn{
 	line-height: 40px;
 	text-decoration: none;
 	text-align: center;
+	font-size: 14px;
 }
 a.ctl_btn:hover{
  	color:#ffffff;
@@ -70,6 +87,10 @@ a.ctl_btn:hover{
 	left: 0;
 	top:0;
 	bottom: 0;
+}
+/* 左侧文字描述部分*/
+.leftpart .bodypart{
+	background: #0062b0;
 }
 /*内容右侧*/
 .rightpart{
@@ -84,7 +105,7 @@ a.ctl_btn:hover{
 	left: 15px;
 	top:0;
 	right: 15px;
-	height: 80px;	
+	height: 80px;
 }
 .titlepart h3{
 	color: #fff;
@@ -98,9 +119,9 @@ a.ctl_btn:hover{
 	position: absolute;
 	left: 15px;
 	right: 15px;
-	top: 100px;	
-	bottom:0;	
-	
+	top: 100px;
+	bottom:0;
+
 }
 .bodypart p{
 line-height: 24px!important;
@@ -108,8 +129,9 @@ line-height: 24px!important;
     text-align: left!important;
     padding: 18px;
     color: #fff;
-    background: #0062b0;	
+    background: #0062b0;
     min-height: 300px;
+		margin: 0;
 }
 .bodypart  img{
 }
@@ -117,15 +139,15 @@ line-height: 24px!important;
 
 .flex-box {
 	display: flex;
-	flex-flow: row  wrap;	
+	flex-flow: row  wrap;
 	align-content: center;
 }
 .flex-item{
    	text-align: center;
 }
 .flex-item  img{
-	width: 100%;	
-	height: 99%;	
+	width: 100%;
+	height: 99%;
 }
 .image-wrapper{
 	position:relative;
@@ -155,6 +177,7 @@ line-height: 24px!important;
 	height: 50%;
 }
 
+
 .tdc{
 
 }
@@ -170,7 +193,7 @@ line-height: 24px!important;
 	border: 5px solid transparent;
 }
 
-.tdc, .tdc-detail 
+.tdc, .tdc-detail
 {
 	background-image: url('../Images/tdc_bg.jpg');
 }
@@ -209,7 +232,7 @@ line-height: 24px!important;
 		width: 200px;
 }
 .business .logo{
-    top: 20px;	
+    top: 20px;
 }
 #ywbk p{
 	color: #fff;
@@ -227,18 +250,19 @@ line-height: 24px!important;
     height: 40px;
     width: 80px;
     padding: 0;
+		overflow: hidden;
 }
- 
- 
+
+
 #footer .back-btn
 {
-	background-image: url('../Images/back_07.png');
+	/*background-image: url('../Images/back_07.png');*/
 	background-size:contain;
 	background-repeat: no-repeat;
 }
 #footer .back-home-btn
 {
-	background-image: url('../Images/back_09.png');
+	/*background-image: url('../Images/back_09.png')*/;
 	background-size:contain;
 	background-repeat: no-repeat;
 }
@@ -246,7 +270,7 @@ line-height: 24px!important;
 {
 	width: 40px;
 	height: 40px;
-	background-image: url('../Images/sp_10.png');
+	/*background-image: url('../Images/sp_10.png')*/;
 	background-size:contain;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -255,13 +279,18 @@ line-height: 24px!important;
 {
 	/*background-image: url('../Images/sp_07.png');
 	background-size:contain;
-	background-repeat: no-repeat;       
+	background-repeat: no-repeat;
 	*/
 	width: 100%;
 }
+#footer .play-audio-btn span{
+	font-size: 2em;
+	line-height: 40px;
+	text-align: center;
+}
 
 #back{
-	 
+
 }
 #back img{
 	width: 100%;
@@ -281,12 +310,12 @@ line-height: 24px!important;
 	overflow:hidden;
 }
 
-.waik{	
+.waik{
 	box-shadow: 0px 0px 0px;
 	transition:all 2000;
 	margin-bottom: 20px;
 }
-.waik:hover{	
+.waik:hover{
 	box-shadow: 0px 6px 6px;
 }
 #zlogo img{
@@ -297,7 +326,7 @@ line-height: 24px!important;
 .sptou h3{
 	color: #fff;
 	font-weight: bold;
-	line-height:10px; 
+	line-height:10px;
 	text-align: left;
 }
 .spcontent{
@@ -385,4 +414,69 @@ line-height: 24px!important;
 .gimg4{
 	width: 49%;
 	float: right;
+}
+
+/* 视频样式 */
+.modal-content{
+  background-color: #333333;
+}
+
+/*按钮特效*/
+.s {
+  position: relative;
+   background: #333333;
+   box-shadow: inset -1px 1px 4px 2px #444, inset 1px -1px 4px 2px #222;
+
+  transition: all 1s;
+}
+
+.sb {
+	background-color: #ffffff;
+	display: inline-block;
+	border-radius: 50%;
+  animation: bs linear 2s 1.5s infinite;
+}
+/*
+.sb:hover {
+  animation: bs2 linear 1s 1s infinite, bs2-in 1s;
+}
+*/
+.business .sb{
+	border-radius: 28px;
+}
+
+@keyframes bs {
+  0% {
+    box-shadow: inset -1px 1px 3px 2px #444444, inset 1px -1px 3px 2px #222222, 0 0 0px 0 #b2ff1a;
+  }
+
+  50% {
+    box-shadow: inset -1px 1px 3px 2px #444444, inset 1px -1px 3px 2px #222222, 0 0 20px 0 #1affff;
+  }
+
+  100% {
+    box-shadow: inset -1px 1px 3px 2px #444444, inset 1px -1px 3px 2px #222222, 0 0 0px 0 #b2ff1a;
+  }
+}
+@keyframes bs2-in {
+  0% {
+    box-shadow: inset -1px 1px 3px 2px #444444, inset 1px -1px 3px 2px #222222, 0 0 10px 0 #bbff33;
+  }
+
+  100% {
+    box-shadow: inset -1px 1px 5px 2px #444444, inset 1px -1px 5px 2px #222222, 0 0 0px 0 #ff3333;
+  }
+}
+@keyframes bs2 {
+  0% {
+    box-shadow: inset -1px 1px 5px 2px #444444, inset 1px -1px 5px 2px #222222, 0 0 0px 0 #ff3333;
+  }
+
+  50% {
+    box-shadow: inset -1px 1px 5px 2px #444444, inset 1px -1px 5px 2px #222222, 0 0 10px 0 #ffbb33;
+  }
+
+  100% {
+    box-shadow: inset -1px 1px 5px 2px #444444, inset 1px -1px 5px 2px #222222, 0 0 0px 0 #ff3333;
+  }
 }
