--- a/styles/app.css
+++ b/styles/app.css
@@ -689,3 +689,15 @@ line-height: 24px!important;
 .div3img{width:60%;margin: 30px 20px;cursor: pointer;}
 .dizhi{width:100%;text-align:center;margin-top:15%;text-align:left;}
 .dizhi b{color: #fff;font-size: 30px;}
+
+
+.left7{
+	width: 49%;
+	float: left;
+	margin-bottom:1.5%;
+}
+.right7{
+	width: 49%;
+	float: right;
+	margin-bottom: 1.5%;
+}
