--- a/styles/app.css
+++ b/styles/app.css
@@ -113,7 +113,21 @@ img{
 {
 	margin-bottom: 0;
 }
+.grid .col-1-2-left{
+	width:50%; height:100%; float:left;padding:0 10px 0 0; overflow: hidden;
+}
 
+.grid .col-1-2-right{
+	width:50%;height:100%; float:right; padding: 0 0 0 10px; overflow: hidden;
+}
+
+.grid .lin-1-2-top{
+	width:100%;height:50%; padding: 0 0 10px 0; overflow: hidden; background-color: #c7254e;
+}
+
+.grid .lin-1-2-foot{
+	width:100%;height:50%; padding: 10px 0 0 0; overflow: hidden; background-color: #1affff;
+}
 
 .main-content
 {
@@ -700,4 +714,132 @@ line-height: 24px!important;
 	width: 49%;
 	float: right;
 	margin-bottom: 1.5%;
+}
+
+#fenlei a.business_btn1{
+	background-image: url('../images/culture/culture1_07.png');transition:all 1s;
+}
+#fenlei a.culture_btn1{
+	background-image: url('../images/culture/culture1_10.png');transition:all 1s;
+}
+#fenlei a.party_btn1{
+	background-image: url('../images/culture/culture1_12.png');transition:all 1s;
+}
+#fenlei a.profile_btn1{
+	background-image: url('../images/culture/culture1_14.png');transition:all 1s;
+}
+#fenlei a.business_btn1:hover{
+	background-image: url('../images/culture/culture_07.png');
+}
+#fenlei a.culture_btn1:hover{
+	background-image: url('../images/culture/culture_10.png');
+}
+#fenlei a.party_btn1:hover{
+	background-image: url('../images/culture/culture_12.png');
+}
+#fenlei a.profile_btn1:hover{
+	background-image: url('../images/culture/culture_14.png');
+}
+
+
+#fenlei a.business_btn2{
+	background-image: url('../images/party/party_06.png');transition:all 1s;
+}
+#fenlei a.culture_btn2{
+	background-image: url('../images/party/party_08.png');transition:all 1s;
+}
+#fenlei a.party_btn2{
+	background-image: url('../images/party/party_10.png');transition:all 1s;
+}
+#fenlei a.profile_btn2{
+	background-image: url('../images/party/party_12.png');transition:all 1s;
+}
+#fenlei a.business_btn2:hover{
+	background-image: url('../images/party/party2_06.png');
+}
+#fenlei a.culture_btn2:hover{
+	background-image: url('../images/party/party2_08.png');
+}
+#fenlei a.party_btn2:hover{
+	background-image: url('../images/party/party2_10.png');
+}
+#fenlei a.profile_btn2:hover{
+	background-image: url('../images/party/party2_12.png');
+}
+
+
+
+#fenlei a.business_btn3{
+	background-image: url('../images/tss/tss1_06.png');transition:all 1s;
+}
+#fenlei a.culture_btn3{
+	background-image: url('../images/tss/tss1_08.png');transition:all 1s;
+}
+#fenlei a.business_btn3:hover{
+	background-image: url('../images/tss/tss_06.png');
+}
+#fenlei a.culture_btn3:hover{
+	background-image: url('../images/tss/tss_08.png');
+}
+.rightt{
+	position: absolute;
+	right: 0px;
+	top: 100px;
+}
+.leftpartqq{
+	width: 100%;
+}
+.leftpartqq li{
+	width: 160px;
+	list-style: none;
+	float: left;
+	margin: 10px;
+}
+.titlepart1{
+
+	left: 15px;
+	top:0;
+	right: 15px;
+	height: 50px;
+}
+.titlepart1 h3{
+	color: #fff;
+	font-weight: bold;
+	text-align: left;
+	letter-spacing: 4px;
+}
+.bodypart1{
+	
+	right: 15px;
+	top: 100px;
+	bottom:0;
+	min-height: 450px;
+    background: #0062b0;
+
+
+}
+.bodypart1 p{
+line-height: 16px!important;
+    font-size: 12px!important;
+    text-align: left!important;
+    padding: 18px;
+    color: #fff;
+    background: #0062b0;
+   
+		margin: 0;
+}
+.bodypart1 h5{
+line-height: 24px!important;
+
+    text-align: left!important;
+    padding: 18px 18px 0 18px;
+    color: #fff;
+    background: #0062b0;
+
+		margin: 0;
+}
+.bodypart1  img{
+}
+.leftpart1 .bodypart1{
+	background: #0062b0;
 }
