--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,11 @@
+*{
+	box-sizing:border-box;
+}
 img{
 	width: 100%;
+}
+a:hover{
+	text-decoration: none;
 }
 #preloader {
 	position:absolute;
@@ -95,6 +101,25 @@ img{
 	float: left;
 	width: 20%;
 }
+.width-1-4
+{
+	float: left;
+	width: 25%;
+	height: 100%;
+}
+.width-1-3
+{
+	float: left;
+	width: 33.333%;
+	height: 100%;
+}
+.width-1-2
+{
+	float: left;
+	width: 50%;
+	height: 100%;
+}
+
 .grid .i-col
 {
 	padding-right: 8px;
@@ -247,42 +272,46 @@ line-height: 24px!important;
 	}
 }
 
-.flex-box {
-	display: flex;
-	flex-flow: row  wrap;
-	align-content: center;
-}
-.flex-item{
-   	text-align: center;
-}
-.flex-item  img{
-	width: 100%;
-	height: 99%;
-}
+
 .image-wrapper{
 	position:relative;
-	display: flex;
 	height:100%;
-	flex-direction: column;
+	display: block;
 }
 .image-wrapper  p{
+	/* 标题 定位在底部*/
 	position: absolute;
-	height: 30px;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	color: #fff;
 	font-weight: bold;
-	line-height: 30px;
+	line-height: 40px;
 	letter-spacing: 2px;
 	text-align: center;
 }
 .image-wrapper div{
 	position: absolute;
-	top: 0;
-	bottom: 30px;
+	top: 10px;
+	left: 10px;
+	right: 10px;
+	bottom: 40px;
 	overflow:hidden;
+	box-shadow: 0px 0px 0px;
+	transition:all 2000;
 }
+
+.image-wrapper div:hover{
+	border: 3px solid #0c6081;
+	border-radius: 6px;
+	box-shadow: 0 2px;
+}
+.image-wrapper div img{
+	height: 100%;
+	width: auto;
+}
+
+
 .half-height{
 	height: 50%;
 }
