--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,15 @@
+/* RESET */
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0}
+input,button,textarea{border:none 0}
+fieldset,img{border:0}
+table{border-collapse:collapse;border-spacing:0}
+ul,ol{list-style:none}
+a:link{text-decoration:none}
+a:visited{text-decoration:none}
+a:hover{text-decoration:none}
+
+.clear{zoom:1}
+.clear:after{content:"";display:block;clear:both}
 *{
 	box-sizing:border-box;
 }
