添加企业文化音频

--- a/styles/app.css
+++ b/styles/app.css
@@ -55,14 +55,17 @@ a:hover{
 	height: 120px;
 	right: -60px;
 	top:-60px;
-	background-color: red;
+	background-color: gray;
 	background-image: url('../images/lightbox/close.png');
 	background-size: 20%;
 	background-repeat: no-repeat;
 	background-position: 25% 75%;
 	border-radius: 100%;
-
 }
+#exit_btn:hover{
+	background-color: #D61518;
+}
+
 
 .page{
 	position: absolute;
@@ -287,12 +290,16 @@ a.ctl_btn:hover{
 .bodypart  img{
 }
 
-.modal .close {
-	opacity: 0.7;
+.culture .modal-dialog{
+
+	margin-top: 150px;
+
 }
-.modal .close span{
-	color: #ffffff;
+.culture .modal-dialog .modal-body
+{
+	min-height: 240px;
 }
+
 
 @media screen and (min-width: 1366px) {
 	.modal-dialog{
@@ -713,10 +720,6 @@ a.ctl_btn:hover{
 	float: right;
 }
 
-/* 视频样式 */
-.modal-content{
-  background-color: #333333;
-}
 
 /*按钮特效*/
 .s {
@@ -874,41 +877,6 @@ a.ctl_btn:hover{
 	top: 100px;
 }
 
-.bodypart1{
-
-	right: 15px;
-	top: 100px;
-	bottom:0;
-	min-height: 450px;
-    background: #0062b0;
-
-
-}
-.bodypart1 p{
-line-height: 16px!important;
-    font-size: 12px!important;
-    text-align: left!important;
-    padding: 18px;
-    color: #fff;
-    background: #0062b0;
-
-		margin: 0;
-}
-.bodypart1 h5{
-line-height: 24px!important;
-
-    text-align: left!important;
-    padding: 18px 18px 0 18px;
-    color: #fff;
-    background: #0062b0;
-
-		margin: 0;
-}
-.bodypart1  img{
-}
-.leftpart1 .bodypart1{
-	background: #0062b0;
-}
 
 
 /* 文化体系 */
@@ -940,10 +908,56 @@ line-height: 24px!important;
 	float: left;
 	padding: 10px;
 }
+.polaroids li > a{
+	display: block;
+}
 
-.polaroids li > div:hover{
+.polaroids li > a:hover{
 	transform:scale(1.05);
 	box-shadow:0 3px 6px rgba(0,0,0,.5);
 	position: relative;
 	z-index: 5;
+}
+.polaroids li > a:focus{
+	outline: inherit;
+}
+
+.polaroids p{
+	text-indent: 2em;
+}
+
+.bodypart1{
+
+	right: 15px;
+	top: 100px;
+	bottom:0;
+	min-height: 450px;
+    background: #0062b0;
+
+
+}
+.bodypart1 p{
+	line-height: 16px!important;
+    font-size: 12px!important;
+    text-align: left!important;
+    padding: 12px;
+    color: #fff;
+    background: #0062b0;
+
+		margin: 0;
+}
+.bodypart1 h5{
+line-height: 24px!important;
+
+    text-align: left!important;
+    padding: 15px 15px 0 15px;
+    color: #fff;
+    background: #0062b0;
+
+		margin: 0;
+}
+.bodypart1  img{
+}
+.leftpart1 .bodypart1{
+	background: #0062b0;
 }
