--- a/styles/app.css
+++ b/styles/app.css
@@ -947,7 +947,8 @@ a.ctl_btn:hover{
 		margin: 0;
 }
 .bodypart1 h5{
-line-height: 24px!important;
+	min-height: 80px;
+line-height: 20px!important;
 
     text-align: left!important;
     padding: 15px 15px 0 15px;
