--- a/styles/app.css
+++ b/styles/app.css
@@ -962,3 +962,241 @@ line-height: 20px!important;
 .leftpart1 .bodypart1{
 	background: #0062b0;
 }
+
+/* JBB add*/
+.grid .col2-40b-right-2lin {
+     width: 100%;
+     height: 37.5%;
+     padding: 0 0 10px 0;
+     overflow: hidden;
+ }
+
+ .grid .col2-80b-left {
+     width: 80%;
+     height: 100%;
+     float: left;
+     padding: 0 10px 0 0 ;
+     overflow: hidden;
+ }
+
+ .grid .col2-20b-right {
+     width: 20%;
+     height: 100%;
+     float: left;
+     overflow: hidden;
+ }
+
+ .grid .lin2-25b-top-4col {
+     width: 25%;
+     height: 100%;
+     float: left;
+     padding: 0 10px 0 0;
+     overflow: hidden;
+ }
+
+ .grid .col2-20b-right-1lin {
+     width: 100%;
+     height: 25%;
+     padding: 0 0 10px 0;
+     overflow: hidden;
+ }
+ .grid .col-1-2-left {
+      width: 50%;
+      height: 100%;
+      float: left;
+      padding: 0 10px 0 0;
+      overflow: hidden;
+  }
+
+  .grid .col-1-2-right {
+      width: 50%;
+      height: 100%;
+      float: right;
+      padding: 0 0 0 10px;
+      overflow: hidden;
+  }
+
+  .grid .lin-1-2-top {
+      width: 100%;
+      height: 50%;
+      padding: 0 0 10px 0;
+      overflow: hidden;
+  }
+
+  .grid .lin-1-2-foot {
+      width: 100%;
+      height: 50%;
+      padding: 10px 0 0 0;
+      overflow: hidden;
+  }
+
+  .grid .col-3max-left {
+      width: 60%;
+      height: 100%;
+      float: left;
+      padding: 0 10px 0 0;
+      overflow: hidden;
+  }
+
+  .grid .col-3max-right {
+      width: 30%;
+      height: 100%;
+      float: left;
+      padding: 0 0 0 10px;
+      overflow: hidden;
+  }
+
+
+  .grid .col-2n-3max-right {
+      width: 100%;
+      height: 50%;
+      float: left;
+      padding: 0 0 10px 0;
+      overflow: hidden;
+  }
+
+  .grid .col-3n-3max-right {
+      width: 100%;
+      height: 50%;
+      float: left;
+      padding: 10px 0 0 0;
+      overflow: hidden;
+  }
+
+  .grid .col-8max-left {
+      width: 60%;
+      height: 100%;
+      float: left;
+      padding: 0 10px 0 0;
+      overflow: hidden;
+ }
+ .grid .col-8max-right {
+      width: 40%;
+      height: 100%;
+      float: left;
+      padding: 0 0 0 0;
+      overflow: hidden;
+	}
+	.grid .col-lin1-8max-right {
+     width: 100%;
+     height: 25%;
+     float: left;
+     padding: 0 0 10px 0;
+     overflow: hidden;
+	 }
+ .grid .col-1-2-left{
+ 	width:50%; height:100%; float:left;padding:0 10px 0 0; overflow: hidden;
+  }
+
+ .grid .col2-60b-left {
+     width: 60%;
+    height: 100%;
+     float: left;
+     padding: 0 10px 0 0 ;
+     overflow: hidden;
+ .grid .col-1-2-right{
+ 	width:50%;height:100%; float:right; padding: 0 0 0 10px; overflow: hidden;
+  }
+
+
+ .grid .col2-40b-right {
+     width: 40%;
+    height: 100%;
+     float: left;
+     overflow: hidden;
+	 }
+ .grid .lin-1-2-top{
+ 	width:100%;height:50%; padding: 0 0 10px 0; overflow: hidden;
+  }
+
+ .grid .lin2-25b-top {
+     width: 100%;
+     height: 25%;
+    float: left;
+     padding: 0 0 10px 0;
+     overflow: hidden;
+	 }
+ .grid .lin-1-2-foot{
+ 	width:100%;height:50%; padding: 10px 0 0 0; overflow: hidden;
+  }
+
+ .grid .lin2-75b-foot {
+     width: 100%;
+     height: 75%;
+     float: left;
+     /*padding: 0 0 10px 0;*/
+     overflow: hidden;
+	 }
+ .grid .col-3max-left{
+ 	width:60%; height:100%; float:left;padding:0 10px 0 0; overflow: hidden;
+  }
+
+ .grid .lin2-25b-top-3col {
+     width: 33.33%;
+     height: 100%;
+     float: left;
+     padding: 0 10px 0 0;
+     overflow: hidden;
+	 }
+ .grid .col-3max-right{
+ 	width:30%; height:100%; float:left;padding:0 0 0 10px; overflow: hidden;
+  }
+
+ .grid .col2-40b-right-1lin {
+     width: 100%;
+     height: 25%;
+     padding: 0 0 10px 0;
+     overflow: hidden;
+	 }
+ .grid .col-2n-3max-right{
+ 	width:100%; height:50%; float:left;padding:0 0 10px 0; overflow: hidden;
+  }
+
+ .grid .col2-40b-right-2lin {
+     width: 100%;
+     height: 37.5%;
+    padding: 0 0 10px 0;
+     overflow: hidden;
+	 }
+ .grid .col-3n-3max-right{
+ 	width:100%; height:50%; float:left;padding:10px 0 0 0; overflow: hidden;
+}
+
+ .grid .col2-80b-left {
+     width: 80%;
+    height: 100%;
+    float: left;
+     padding: 0 10px 0 0 ;
+    overflow: hidden;
+	}
+ .grid .col-8max-left{
+ 	width:60%; height:100%; float:left;padding:0 10px 0 0; overflow: hidden;
+}
+
+ .grid .col2-20b-right {
+    width: 20%;
+     height: 100%;
+    float: left;
+     overflow: hidden;
+ }
+ .grid .col-8max-right{
+ 	width:40%; height:100%; float:left;padding:0 0 0 0; overflow: hidden;
+  }
+
+ .grid .lin2-25b-top-4col {
+     width: 25%;
+    height: 100%;
+    float: left;
+     padding: 0 10px 0 0;
+    overflow: hidden;
+ }
+ .grid .col-lin1-8max-right{
+ 	width:100%; height:25%; float:left;padding:0 0 10px 0; overflow: hidden;
+}
+
+ .grid .col2-20b-right-1lin {
+     width: 100%;
+    height: 25%;
+    padding: 0 0 10px 0;
+    overflow: hidden;
+ }
