--- a/styles/app.css
+++ b/styles/app.css
@@ -150,10 +150,20 @@ a:hover{
 	height: 100%;
 }
 
+.grid{
+
+}
+.grid a{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	display: inline-block;
+}
 .grid .i-col
 {
 	padding-right: 8px;
 }
+
 .grid .i-col:last-child
 {
 
