--- a/styles/app.css
+++ b/styles/app.css
@@ -127,18 +127,24 @@ a:hover{
 	bottom: 0;
 }
 /* height 1/2*/
-.col-1-2-left{
-	width: 100%;
- 	height: 50%;
-	overflow: hidden;
-	padding-bottom: 8px;
-
-}
 
 .width-1-5
 {
 	float: left;
 	width: 20%;
+	height: 100%;
+}
+.width-3-5
+{
+	float: left;
+	width: 60%;
+	height: 100%;
+}
+.width-2-5
+{
+	float: left;
+	width: 40%;
+	height: 100%;
 }
 .width-1-4
 {
@@ -152,7 +158,6 @@ a:hover{
 	width: 33.333%;
 	height: 100%;
 }
-
 
 .grid{
 	height: 100%;
@@ -208,6 +213,14 @@ a:hover{
 /* 一半高度下*/
 .grid .col-1-2-bottom{
 	height:50%;width:100%; float:right; padding: 8px 0 0 0; overflow: hidden;
+}
+
+/* 1/4高度*/
+.grid .col-1-4-top{
+	width:100%; height:25%; float:left;padding:0 0 8px 0; overflow: hidden;
+}
+.grid .col-3-4-bottom{
+	width:100%; height:75%; float:left;padding: 8px 0 0 0; overflow: hidden;
 }
 
 
@@ -1100,9 +1113,6 @@ line-height: 20px!important;
      padding: 0 0 10px 0;
      overflow: hidden;
 	 }
- .grid .col-1-2-left{
- 	width:50%; height:100%; float:left;padding:0 10px 0 0; overflow: hidden;
-  }
 
 
  .grid .col2-60b-left {
