--- a/styles/app.css
+++ b/styles/app.css
@@ -159,6 +159,13 @@ a:hover{
 	height: 100%;
 }
 
+.height-1-3
+{
+ 	height: 33.333%;
+	width: 100%;
+	overflow: hidden;
+}
+
 .grid{
 	height: 100%;
 }
@@ -170,6 +177,7 @@ a:hover{
 }
 .grid .i-col
 {
+	padding-left: 8px;
 	padding-right: 8px;
 }
 
