--- a/styles/app.css
+++ b/styles/app.css
@@ -324,7 +324,8 @@ a.ctl_btn:hover{
 	bottom:0;
 
 }
-.bodypart p{
+.bodypart .desc{
+
 	text-indent: 2em;
 	line-height: 24px!important;
     font-size: 12px!important;
@@ -1276,14 +1277,20 @@ line-height: 20px!important;
  .main-content  {
  margin-top: 30px;
  }
+ .jiandanglist{
+	 height: 100%;
+ }
  .jiandanglist li{
  	float: left;
- 	width: 200px;
- 	margin: 0 10px 20px 10px;
+ 	height: 33.333333%;
+	width: 25%;
+ 	padding: 0 10px 10px 0;
  }
  .jiandanglist1 li{
  	float: left;
  	width: 290px;
+	height: 200px;
+	position: relative;
  	margin: 0 10px 20px 10px;
  }
  .jiandanglist2 {
@@ -1311,10 +1318,7 @@ line-height: 20px!important;
  	margin: 0 10px 20px 10px;
  }
 
- .xiao{
- position: relative!important;
-     height: 170px;
- }
+
  .jdtou{
  	width: 1200px;
  	margin: auto;
