--- a/styles/app.css
+++ b/styles/app.css
@@ -146,6 +146,12 @@ a:hover{
 	width: 40%;
 	height: 100%;
 }
+.width-4-5
+{
+	float: left;
+	width: 80%;
+	height: 100%;
+}
 .width-1-4
 {
 	float: left;
@@ -159,6 +165,12 @@ a:hover{
 	height: 100%;
 }
 
+.height-1-2
+{
+ 	height:50%;
+	width: 100%;
+	overflow: hidden;
+}
 .height-1-3
 {
  	height: 33.333%;
