--- a/styles/app.css
+++ b/styles/app.css
@@ -170,6 +170,12 @@ a:hover{
 	width: 33.333%;
 	height: 100%;
 }
+.width-2-3
+{
+	float: left;
+	width: 66.666%;
+	height: 100%;
+}
 
 .height-1-2
 {
