钢材市场-- 添加app.css 少六张图片

--- a/styles/app.css
+++ b/styles/app.css
@@ -189,6 +189,12 @@ a:hover{
 	width: 100%;
 	overflow: hidden;
 }
+.height-2-3
+{
+ 	height: 66.666%;
+	width: 100%;
+	overflow: hidden;
+}
 .height-1-4
 {
  	height:25%;
