添加部分声音

--- a/styles/app.css
+++ b/styles/app.css
@@ -410,6 +410,24 @@ a.ctl_btn:hover{
 .try2 .bodypart .desc{
 	line-height: 26px!important;
 }
+.jiandang6 .bodypart .desc{
+	line-height: 30px!important;
+}
+.jiandang3 .bodypart .desc{
+	line-height: 30px!important;
+}
+.jiandang7 .bodypart .desc{
+	line-height: 30px!important;
+}
+.jiandang4 .bodypart .desc{
+	line-height: 30px!important;
+}
+.jiandang5 .bodypart .desc{
+	line-height: 32px!important;
+}
+.zhigong1 .bodypart .desc{
+	line-height: 22px!important;
+}
 .bodypart  img{
 }
 
