调整熊岳疗养图片布局

--- a/styles/app.css
+++ b/styles/app.css
@@ -1453,3 +1453,18 @@ line-height: 20px!important;
  	width: 1200px;
  	margin: auto;
  }
+
+ /*铁越风采 视频列表*/
+ .video-thumb{
+	 position: relative;
+	 width:20%;
+	 height:30%;
+	 float:left;
+	 background-color:#fff;
+	 text-align: center;
+ }
+ .video-thumb .vjs-big-play-button{ width: 30%; height:30%; top: 35%; left:35%;}
+ .video-thumb .image{ position: absolute; top: 0; bottom:30px; left:0; right: 0;}
+ .video-thumb .image img{ width: auto; height:100%; }
+ .video-thumb .title{ position: absolute; height: 30px; bottom:0; left:0; right: 0; line-height:30px;background-color:#fff;}
+ 
