调整视频缩略图高度

--- a/styles/app.css
+++ b/styles/app.css
@@ -1462,7 +1462,7 @@ line-height: 20px!important;
  .video-thumb{
 	 position: relative;
 	 width:20%;
-	 height:30%;
+	 height:150px;
 	 float:left;
 	 text-align: center;
 	 margin: 0 0 8px 0;
