调整典型示范文字，行高过大

--- a/styles/app.css
+++ b/styles/app.css
@@ -432,6 +432,9 @@ a.ctl_btn:hover{
 .jiandang7 .bodypart .desc{
 	line-height: 30px!important;
 }
+.jiandang8 .bodypart .desc{
+	line-height: 34px!important;
+}
 .jiandang4 .bodypart .desc{
 	line-height: 30px!important;
 }
