--- a/styles/app.css
+++ b/styles/app.css
@@ -1437,15 +1437,24 @@ line-height: 20px!important;
 	position: relative;
  	margin: 0 10px 20px 10px;
  }
+ .zhigonglist2 li{
+	 float: left;
+  	width: 33.333333%;
+ 		height: 50%;
+  	padding: 0 8px 8px 8px;
+ }
+ .zhigonglist2 li.line2{
+		padding: 8px 8px 0 8px;
+	}
  .jiandanglist5 li{
 	 float: left;
 	 width: 25%;
  	 height: 50%;
  	 position: relative;
-	 padding: 0 10px 10px 10px;
+	 padding: 0 8px 8px 8px;
  }
   .jiandanglist5 li.line2{
-	 padding: 10px 10px 0 10px;
+	 padding: 8px 8px 0 8px;
  }
  .jiandanglist5 li img{
 	 width: auto;  height: 100%;
