--- a/styles/app.css
+++ b/styles/app.css
@@ -205,7 +205,12 @@ a:hover{
 	height:75%;
 	width: 100%;
 	overflow: hidden;
-
+}
+.h100{
+	height: 100px;
+}
+.h50{
+	height: 50px;
 }
 .grid{
 	height: 100%;
@@ -571,7 +576,6 @@ a.ctl_btn:hover{
 }
 #fenlei{
     position: relative;
-    top: 350px;
 }
 #fenlei img{
 	width: 100%;
@@ -585,6 +589,16 @@ a.ctl_btn:hover{
 	background-size: contain;
 	background-repeat: no-repeat;
 }
+#fenlei a.floor_btn{
+	margin-top: 75px;
+	width: 300px;
+	height: 300px;
+	background-image: url('../images/style/btn_floor.png');
+}
+#fenlei a.floor_btn:hover{
+	background-image: url('../images/style/btn_floorh.png');
+}
+
 #fenlei a.business_btn{
 	background-image: url('../images/style/btn_business.png');
 }
