--- a/styles/guide.css
+++ b/styles/guide.css
@@ -1,7 +1,9 @@
 .guide .wp33{
   width: 33%;
-  height: 100px;
   float: left;
+}
+.guide .header{
+  position: relative;
 }
 .guide .logo{
   position: absolute;
@@ -14,7 +16,7 @@
 }
 .guide .page-title
 {
-  height: 80px;
+  height: 70px;
   padding: 12px;
   text-align: center;
 }
@@ -24,36 +26,76 @@
 .guide .fs16{
   font-size: 16px;
 }
+
 .guide .lh18{
   line-height: 18px !important;
 }
-
+.guide .lh12{
+  line-height: 12px !important;
+  font-size: 10px !important;
+}
+.guide .p12{
+  padding: 12px;
+}
 .guide a.floor{
   border: 4px solid #A4A7B8;
   border-radius: 8px;
   display: block;
   width: 320px;
-  margin:  30px auto 0;
+  height: 80px;
+  margin:  15px auto;
   background-image: url('../images/guide/floorbg.png');
   background-size: cover;
   color: #000;
-  padding: 12px 0;
+  padding: 18px 0;
 }
 
 .guide a.floor .title{
   display: inline-block;
   font-size: 18px;
   font-weight: bold;
-  padding: 0 0 0 12px ;
+  padding: 0 8px ;
   line-height: 36px;
 }
 .guide a.floor .num{
+  width: 70px;
   color: #0C195F;
   font-size: 25px;
   font-weight: bold;
   display: block;
   border-right: 1px solid #000;
-  padding: 0 16px;
   float: left;
   line-height: 36px;
+  text-align: center;
+}
+.guide .floor-content
+{
+  position: absolute;
+  top:100px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+.guide .header .num-wrap
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  background-image: url('../images/guide/logobg.png');
+  background-size: cover;
+  padding: 12px 30px;
+}
+.guide .header .num-wrap img
+{
+
+}
+.guide .header .logo-wrap
+{
+  position: relative;
+  width: 450px;
+  margin: 0 auto;
+  z-index: 1;
 }
