删除视屏最小化按钮

--- a/styles/app.css
+++ b/styles/app.css
@@ -82,7 +82,11 @@ a:hover{
 {
 	font-size: 30px;
 }
-
+/* 视频全屏时，不允许调整窗口，只可以关闭*/
+.video-js .vjs-fullscreen-control
+{
+	display: none;
+}
 .page{
 	position: absolute;
 	top: 0;
