--- a/styles/app.css
+++ b/styles/app.css
@@ -395,7 +395,7 @@ a.ctl_btn:hover{
     color: #fff;
     background: #0062b0;
     min-height: 280px;
-		margin: 0;
+	margin: 0;
 }
 
 .profile .bodypart .desc{
@@ -1518,6 +1518,10 @@ line-height: 20px!important;
  .jdtou{
  	width: 1200px;
  	margin: auto;
+ }
+
+ .qingchun2 .row{
+	 padding: 5px 0 5px 0;
  }
 
  /*铁越风采 视频列表*/
